# genericplotter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: binnedvector.rs  main.rs  raster.rs
