[package]
name = "genericplotter"
version = "0.2.0"
description = "A generic scatterplot generator"
authors = ["Jan Christian Kaessens <j.kaessens@ikmb.uni-kiel.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = {version="^0.2.12", default_features=false, features=["image_encoder","ttf","line_series"]}
clap = "2"
